clusters/talos-cluster/apps/traefik-hwg/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: cf-tunnel-hwg
spec:
  controller: traefik.io/ingress-controller
